force-app/main/default/objects/PM_Schedule__c/PM_Schedule__c.object-meta.xml
<CustomObject>
    <label>PM Schedule</label>
    <nameField>
        <displayFormat>PM-{0000}</displayFormat>
        <label>PM Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PM Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>