force-app/main/default/objects/PM_Schedule__c/fields/Interval_Days__c.field-meta.xml
<CustomField>
    <fullName>Interval_Days__c</fullName>
    <label>Interval Days</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>