force-app/main/default/objects/PM_Schedule__c/fields/Last_Run__c.field-meta.xml
<CustomField>
    <fullName>Last_Run__c</fullName>
    <label>Last Run</label>
    <type>DateTime</type>
</CustomField>