force-app/main/default/objects/PM_Schedule__c/fields/Machine_Asset__c.field-meta.xml
<CustomField>
    <fullName>Machine_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Machine Asset</label>
    <referenceTo>Machine_Asset__c</referenceTo>
    <relationshipLabel>PM Schedules</relationshipLabel>
    <relationshipName>PM_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>