force-app/main/default/objects/PM_Schedule__c/fields/Next_Run__c.field-meta.xml
<CustomField>
    <fullName>Next_Run__c</fullName>
    <formula>IF( ISBLANK( Last_Run__c ) , TODAY() , DATEVALUE(Last_Run__c) +  Interval_Days__c  )</formula>
    <label>Next Run</label>
    <type>Date</type>
</CustomField>